implemented /modems/{modemId}/upstream/latest/... resources
