# internal/types/cmts_upstream_modem.go
@@ -2,13 +2,13 @@ package types
 
 // Upstream information from CMTS
 type UpstreamModemCMTS struct {
-	ModemId    ModemId
-	UpstreamId int32
-	PollTime   int32
-	PowerRx    int32 // receive power in tenth dB
-	SNR        int32 // signal to noise ratio in tenth dB
-	Microrefl  int32
-	Unerroreds int64
-	Correcteds int64
-	Erroreds   int64
+	ModemId    ModemId `json:"-"`
+	UpstreamId int32   `json:"id"`
+	PollTime   int32   `json:"-"`
+	PowerRx    int32   `json:"pwr"` // receive power in tenth dB
+	SNR        int32   `json:"snr"` // signal to noise ratio in tenth dB
+	Microrefl  int32   `json:"mrefl"`
+	Unerroreds int64   `json:"unerr"`
+	Correcteds int64   `json:"corr"`
+	Erroreds   int64   `json:"err"`
 }
